<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_navigation"
    app:startDestination="@id/home_nav">

    <fragment
        android:id="@+id/home_nav"
        android:name="com.dedesaepulloh.assesment.presentation.fragment.HomeFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/news_nav"
        android:name="com.dedesaepulloh.assesment.presentation.fragment.NewsFragment"
        android:label="@string/berita"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/contact_nav"
        android:name="com.dedesaepulloh.assesment.presentation.fragment.ContactFragment"
        android:label="@string/kontak"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/profile_nav"
        android:name="com.dedesaepulloh.assesment.presentation.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>